Updated index.html with header, main, footer structure and link to tweets.html

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,23 +1,30 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>My First Portfolio</title>
+  <meta charset="UTF-8">
+  <title>Sandfin - Homepage</title>
 </head>
 <body>
-    <h1>Welcome to My Portfolio</h1>
-    <p>This is my first webpage.</p>
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
 
-    <h2>About Me</h2>
-    <p>I enjoy learning web development.</p>
+  <main>
+    <article>
+      <h1>Welcome to my Homepage</h1>
+      <p>This is my cool website content.</p>
+    </article>
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
 
-    <h3>Current Goals</h3>
-    <p>I’m practicing HTML structure and validation.</p>
-
-    <p>Here’s a clickable image:</p>
-    <a href="https://www.alxafrica.com/" target="_blank">
-        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo">
-    </a>
+  <footer>
+    <p>Made by Sandfin - <a href="https://github.com/Sandfin" target="_blank">here</a></p>
+  </footer>
 </body>
 </html>
-
