Task 2: Added tweets.html and linked it with index.html

--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -2,20 +2,34 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My Tweets</title>
+  <title>Sandfin - Tweets</title>
 </head>
 <body>
-  <h1>My Tweets Page</h1>
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
 
-  <!-- Embedded Tweet -->
-  <blockquote class="twitter-tweet">
-    <p lang="en" dir="ltr">Learning HTML is fun! 🚀</p>
-    &mdash; Sandfin (@yourhandle) 
-    <a href="https://twitter.com/yourhandle/status/1234567890">November 15, 2025</a>
-  </blockquote>
-  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <main>
+    <article>
+      <h1>My Tweets Page</h1>
+      <!-- Embedded Tweet -->
+      <blockquote class="twitter-tweet">
+        <p lang="en" dir="ltr">Learning HTML is fun! 🚀</p>
+        &mdash; Sandfin (@yourhandle)
+        <a href="https://twitter.com/yourhandle/status/1234567890">November 15, 2025</a>
+      </blockquote>
+      <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </article>
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
 
-  <!-- Link back to homepage -->
-  <p><a href="index.html">Go back to Homepage</a></p>
+  <footer>
+    <p>Made by Sandfin - <a href="https://github.com/Sandfin" target="_blank">here</a></p>
+  </footer>
 </body>
 </html>
